Fix service and validation tests